# p3d2foam

./: README.md  pyproject.toml
p3d2foam/: __init__.py  __main__.py  config.py  gmsh_writer.py  nmf.py  p3d_reader.py  pipeline.py  types.py
